chore(deps): add @actions/core

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "https://github.com/knaot0/magicpod-action.git",
   "author": "Naoto92X82V99 <naoto5018@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@actions/core": "^1.6.0"
+  }
 }
