docs: add README.md

--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ inputs:
     description: "Project name"
     required: true
   TEST_SETTINGS_NUMBER:
-    description: "Test settings number defined in the project batch run page (default: 0)"
+    description: "Test settings number defined in the project batch run page"
     required: true
     default: "0"
 runs:
