--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Naoto92X82V99 <naoto5018@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "axios": "^0.26.0"
   }
 }
