chore: magicpod -> magic-pod

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     name: Run batch test
     steps:
       - name: Run batch test step
-        uses: knaot0/magicpod-action@v1.1
+        uses: knaot0/magic-pod-action@v1.1
         with:
           API_TOKEN: ${{ secrets.MAGIC_POD_API_TOKEN }}
           ORGANIZATION: "Organization name"
